--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "illuminate/database",
+    "name": "claudioldf/database",
     "description": "The Illuminate Database package.",
     "license": "MIT",
     "homepage": "http://laravel.com",
